   than CLI or config file choices) per [#1285], e.g.
------
# Set verbosity level 6:
:; upsrw -s driver.debug=6 UPS

# Set verbosity level 0 to disable the noise (even if debug_min is set):
:; upsrw -s driver.debug=0 UPS1@localhost

# Un-set the protocol override, honour CLI or config-file settings again:
:; upsrw -s driver.debug=-1 remoteUPS@1.2.3.4
------
+
and a `driver.killpower` instant command [#1917]

 - Implemented basic support for `ups.conf` reloading in NUT drivers,
   currently limited to `SIGHUP` handling and with a goal of changing
   `debug_min` setting for a running driver. As currently implemented,
   would not fully benefit the drivers on systems managed by real-time
   `nut-driver-enumerator` (it needs to be taught to play well) [#1903]

 - Drivers should now accept `SIGUSR1` to dump their current state information
   (to `stdout` of the driver process, may be disconnected when background
   mode is used) and move on -- this can help with troubleshooting [#1907]

 - Recipes and `main.c` code were enhanced to produce a `libdummy_mockdrv.la`
   helper library during build (not intended to be installed nor distributed),
   in order to facilitate creation of test programs which behave like a driver
   [#1855]

 - Further revision of public headers delivered by NUT was done, particularly
   to address lack of common data types (`size_t`, `ssize_t`, `uint16_t`,
   `time_t` etc.) in third-party client code that earlier sufficed to only
   include NUT headers. Sort of regression by NUT 2.8.0 (note those consumers
   still have to re-declare some numeric variable types used) [#1638, #1615]

 - The `COPYING` file was updated with licenses and attribution for certain
   source code files and blocks coming from the Internet originally [#1758]

---------------------------------------------------------------------------
Release notes for NUT 2.8.0 - what's new since 2.7.4:

NOTE: Earlier discussions (mailing list threads, GitHub issues, etc.) could